force-app/main/default/objects/Text_attributes__mdt/Text_attributes__mdt.object-meta.xml
<CustomObject>
    <label>Text attributes</label>
    <pluralLabel>Text attributes</pluralLabel>
</CustomObject>