force-app/main/default/objects/Text_attributes__mdt/fields/Column_name__c.field-meta.xml
<CustomField>
    <fullName>Column_name__c</fullName>
    <label>Column name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>