force-app/main/default/objects/Text_attributes__mdt/fields/Is_full_view__c.field-meta.xml
<CustomField>
    <fullName>Is_full_view__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you want the text to be shown in full, otherwise it will be truncated.</description>
    <inlineHelpText>Check this box if you want the text to be shown in full, otherwise it will be truncated.</inlineHelpText>
    <label>Is full view</label>
    <type>Checkbox</type>
</CustomField>