force-app/main/default/objects/Text_attributes__mdt/fields/Is_rich_text__c.field-meta.xml
<CustomField>
    <fullName>Is_rich_text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is rich text</label>
    <type>Checkbox</type>
</CustomField>