force-app/main/default/objects/Text_attributes__mdt/fields/Text_api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Text_api_field_name__c</fullName>
    <description>Field name to get values from</description>
    <label>Text api field name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>